dfir_rs/tests/compile-fail-stable/surface_identity_wronggeneric.rs
../compile-fail/surface_identity_wronggeneric.rs